--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "laravel/lumen-framework": "^6.0"
+        "ext-simplexml": "*",
+        "automattic/woocommerce": "^3.0",
+        "guzzlehttp/guzzle": "^6.4",
+        "laravel/lumen-framework": "^6.0",
+        "league/flysystem": " ~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
